--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2192,7 +2192,7 @@ header {
 .neFooterContent p {
 	text-align: center;
 	margin: 0 auto;
-	font-size: 1.2vw;
+	font-size: 16px;
 	opacity: 0.6;
 	margin-bottom: 6vh;
 }
@@ -2700,7 +2700,7 @@ input:checked+label {
 
 .step_link span {
 	margin-bottom: 6px;
-	font-size: 1.5vw;
+	font-size: 30px;
 	color: #FFFFFF;
 	width: 100%;
 	display: flex;
@@ -2772,4 +2772,119 @@ input:checked+label {
 	font-size: 18px;
 	margin-top: 15px;
 	list-style-type: decimal;
+}
+@media screen and (max-width:600px) {
+	h1{
+		font-size:30px !important;
+
+	}
+	.neFooterContent h1{
+		max-width:100%;
+	}
+.footerLinkContent{
+	flex-wrap:wrap;
+	justify-content:center;
+}
+.footerLinkContent div{
+	margin:20px;
+}
+.step_link span, span.ps_logo_us {
+	font-size: 15px;
+}
+
+.what_step{
+	flex-wrap:wrap;
+}
+.what_step .step_video{
+min-width:100%;
+}
+
+
+.protectedContent{
+	flex-wrap:wrap
+}
+.protectedPlace{
+	margin-top: 20px;
+	width:100%;
+}
+.protectedPlace h1{
+	font-size: 20px !important;
+}
+.protectedPlace p{
+	font-size: 14px;
+}
+
+.usConent_Steps{
+	flex-wrap: wrap;
+}
+.usConent_Steps .su_step span{
+	font-size: 30px;
+}
+.usConent_Steps .su_step p{
+	font-size: 14px;
+
+}
+
+.ligues img{
+width:20%;
+height:100%;
+object-fit: contain;
+}
+.ligues{
+	justify-content: space-between;
+}
+.us{
+	height:100%;
+}
+
+.su_step{
+	border:0px black dashed;
+	width:100%;
+	margin-bottom: 25px;
+}
+.su_step .su_button{
+margin-top: 20px;
+}
+.title_news{
+	margin-bottom: 20px;
+	padding-left:2.5%;
+}
+.title_news a{
+	font-size: 15px;
+}
+
+.headerMenuContent .navigatoin a{
+font-size: 15px;
+margin: 0;
+}
+.headerMenuContent .navigatoin a:nth-child(2){
+display: none;
+}
+.headerMenuContent .navigatoin{
+	min-width:0;
+}
+.headerMenuContent .logotype img{
+width:200px;
+}
+.logotype {
+height:100%;
+}
+.main__title {
+	font-size: 40px !important;
+}
+.main__description{
+	font-size: 16px;
+}
+.headerMenuContent{
+	width:100%;
+	padding: 0 10px;
+}
+.button_yellow{
+	font-size: 15px;
+	min-width: 200px;
+	padding: 10px;
+}
+.application{
+	margin-top: 50px;
+}
 }
