--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2837,6 +2837,9 @@ min-width:100%;
 	padding: 10px 20px;
 	max-width: 200px;
 }
+.su_button.green{
+	margin-top: 0 !important;
+}
 .su_button a {
 	font-size: 17px;
 
@@ -2909,8 +2912,8 @@ height:100%;
 	min-width: 200px;
 	padding: 10px;
 }
-.application{
-	margin-top: 50px;
+.application, .statistic{
+	margin: 50px 0;
 }
 .container{
 	align-items:center;
@@ -2926,5 +2929,12 @@ height:100%;
 
 .title_news{
 	margin-bottom: 30px;
+}
+
+.platform__card{
+	margin-right: 0;
+}
+.application__platforms{
+	justify-content: space-between;
 }
 }
